--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/ShellVII/eventNoted.git"
   },
   "author": "Jon Taylor",
-  "license": "MIT",
+  "license": "GNU",
   "bugs": {
     "url": "https://github.com/ShellVII/eventNoted/issues"
   },
